# hisalign

./: .gitignore  README.md  README.zh.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
configs/: default.yaml
docs/assets/: banner_prompt.md
docs/superpowers/plans/: 2026-06-19-he2ihc-align-plan.md
docs/superpowers/specs/: 2026-06-19-he2ihc-align-design.md
examples/: register_jpg.py
scripts/: run_pipeline.py
src/he2ihc_align/: __init__.py  case_io.py  cli.py  mapping.py  patching.py  viz.py
src/he2ihc_align/registration/: __init__.py  feature_detectors.py  feature_matcher.py  non_rigid.py  registrar.py  rigid.py  warp_tools.py
src/he2ihc_align/slide_io/: __init__.py  base.py  factory.py  kfb_backend.py  openslide_backend.py
src/hisalign/: __init__.py  api.py  cli.py  mapping.py  patching.py  preprocessing.py  viz.py
src/hisalign/registration/: __init__.py  feature_detectors.py  feature_matcher.py  non_rigid.py  registrar.py  rigid.py  warp_tools.py
src/hisalign/slide_io/: __init__.py  base.py  factory.py  image_backend.py  kfb_backend.py  openslide_backend.py
tests/: test_api.py  test_cli.py  test_mapping.py  test_patching.py  test_pipeline.py  test_preprocessing.py  test_registration.py  test_slide_io.py  test_viz.py
