[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hisalign"
version = "0.2.0"
description = "HE-to-IHC whole-slide image alignment pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yifan Feng", email = "evanfeng97@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas",
    "pillow",
    "matplotlib",
    "pyvips",
    "opencv-python-headless",
    "scikit-image",
    "scipy",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "pyyaml",
    "openslide-python",
    "openslide-bin",
    "kfbslide",
    "SimpleITK",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
hisalign = "hisalign.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hisalign"]

[tool.hatch.build.targets.sdist]
exclude = [
    "examples/images/*.jpg",
    "examples/images/*.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that require real slide files and take significant time",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/hisalign/registration/warp_tools.py" = ["N803"]
"src/hisalign/registration/non_rigid.py" = ["N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff",
]
